# ci

./: .editorconfig  .travis.yml  CMakeLists.txt
proj1/: CMakeLists.txt
proj1/src/: main.cpp  sample.cpp  sample.h
proj1/test/: test.cpp
